--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,12 @@
               </ion-label>
             </ion-item>
           </ion-menu-toggle>
+          <ion-menu-toggle>
+            <ion-item (click)="onLogout()">
+                <ion-icon slot="start" name="exit"></ion-icon>
+                <ion-label>Logout</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
         </ion-list>
       </ion-content>
     </ion-menu>
