ajustado login e tela inicial

--- a/src/app/home/home-detail/home-detail.page.html
+++ b/src/app/home/home-detail/home-detail.page.html
@@ -41,7 +41,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button expand="full">
+        <ion-button expand="full" (click)="onGetInvitation()">
             GARANTIR CONVITE
         </ion-button>
       </ion-col>
