--- a/src/app/auth/auth.page.html
+++ b/src/app/auth/auth.page.html
@@ -1,14 +1,77 @@
-<ion-content padding-top>
-  <ion-title text-center>
-    <h2>Rangulos</h2>
-  </ion-title>
-  <ion-item>
-    <ion-label position="floating">Usuário</ion-label>
-    <ion-input></ion-input>
-  </ion-item>
-  <ion-item>
-    <ion-label position="floating">Senha</ion-label>
-    <ion-input></ion-input>
-  </ion-item>
-  <ion-button expand="full" (click)="onLogin()">Entrar</ion-button>
+<ion-header>
+  <ion-toolbar color="tertiary">
+    <ion-title>{{ isLogin ? 'Autenticação' : 'Registrar' }}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content padding>
+ <form #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-list>
+            <ion-item>
+              <ion-label position="floating">E-Mail</ion-label>
+              <ion-input
+                type="email"
+                ngModel
+                name="email"
+                required
+                email
+                #emailCtrl="ngModel"
+              ></ion-input>
+            </ion-item>
+            <ion-item
+              *ngIf="!emailCtrl.valid && emailCtrl.touched"
+              lines="none"
+            >
+              <ion-badge>
+                Deve conter um e-mail válido
+              </ion-badge>
+            </ion-item>
+            <ion-item>
+              <ion-label position="floating">Senha</ion-label>
+              <ion-input
+                type="password"
+                ngModel
+                name="password"
+                required
+                minlength="6"
+                #passwordCtrl="ngModel"
+              ></ion-input>
+            </ion-item>
+            <ion-item
+              *ngIf="!passwordCtrl.valid && passwordCtrl.touched"
+              lines="none"
+            >
+              <ion-badge>
+                Senha deve ter no mínimo 6 caracteres
+              </ion-badge>
+            </ion-item>
+          </ion-list>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-button 
+          type="button" 
+          color="primary" 
+          fill="clear" 
+          expand="block"
+          (click)="onSwitchAuthMode()">
+            Trocar para {{ isLogin ? 'Registrar' : 'Entrar' }}
+          </ion-button>
+          <ion-button
+            type="submit"
+            color="primary"
+            (click)="onLogin()"
+            expand="block"
+            [disabled]="!f.valid"
+          >
+            {{ isLogin ? 'Entrar' : 'Registrar' }}
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
