--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -25,17 +25,30 @@
       <ion-col>
         <ion-list>
           <ion-item>
-            {{ loadedEvent.about }}
+            <ion-text>
+              <b>Sobre: </b> {{ loadedEvent.about }}
+            </ion-text>
           </ion-item>
           <ion-item>
-              {{ loadedEvent.briefInformation }}
+            <ion-text>
+              <b>Observações: </b>{{ loadedEvent.adicionalInformation }}
+            </ion-text>
           </ion-item>
           <ion-item>
-              {{ loadedEvent.entertainment }}
+            <ion-text>
+              <b>Entretenimento: </b>{{ loadedEvent.entertainment }}
+            </ion-text>
           </ion-item>
           <ion-item>
-              {{ loadedEvent.date }}
+            <ion-text>
+              <b>Inicio: </b> {{ loadedEvent.startDate | date }}
+            </ion-text>
           </ion-item>
+          <ion-item>
+            <ion-text>
+                <b>Fim: </b> {{ loadedEvent.endDate | date }}
+            </ion-text>
+        </ion-item>
         </ion-list>
       </ion-col>
     </ion-row>
