--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -6,9 +6,9 @@
     <ion-title>
       Eventos
     </ion-title>
-    <ion-buttons slot="end">
-      <ion-button>
-        <ion-icon name="add"></ion-icon>
+    <ion-buttons slot="primary">
+      <ion-button routerLink="/events/new">
+        <ion-icon name="add" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
@@ -61,6 +61,11 @@
           <ion-item-options>
             <ion-item-option (click)="onEdit(event.id, slidingItem)">
               <ion-icon name="create" slot="icon-only"></ion-icon>
+            </ion-item-option>
+          </ion-item-options>
+          <ion-item-options side="start">
+            <ion-item-option color="danger" (click)="onDelete(event.id, slidingItem)">
+              <ion-icon name="trash" slot="icon-only"></ion-icon>
             </ion-item-option>
           </ion-item-options>
         </ion-item-sliding>
