--- a/src/app/events/my-events/edit-my-events/edit-my-events.page.html
+++ b/src/app/events/my-events/edit-my-events/edit-my-events.page.html
@@ -13,146 +13,136 @@
 </ion-header>
 
 <ion-content>
-<form [formGroup]="form">
-  <ion-grid>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-            <ion-label position="floating">Nome do evento</ion-label>
-            <ion-input
-            type="text"
-            formControlName="name"
-            >
-
-            </ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <div *ngIf="form.get('name').invalid && form.get('name').dirty">
-          <ion-badge color="danger">"Nome" obrigatório</ion-badge>
-        </div>
-      </ion-col>
-    </ion-row>
-      
-    <ion-row>
+  <form [formGroup]="form">
+    <ion-grid>
+      <ion-row>
         <ion-col>
           <ion-item>
-              <ion-label position="floating">Sobre</ion-label>
-              <ion-textarea
-              formControlName="about"
-              >
-              </ion-textarea>
+            <ion-label position="floating">Nome do evento</ion-label>
+            <ion-input type="text" formControlName="name"> </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div *ngIf="form.get('name').invalid && form.get('name').dirty">
+            <ion-badge color="danger">"Nome" obrigatório</ion-badge>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Sobre</ion-label>
+            <ion-textarea formControlName="about"> </ion-textarea>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
           <div *ngIf="form.get('about').invalid && form.get('about').dirty">
-              <ion-badge color="danger">"Sobre" obrigatório</ion-badge>
+            <ion-badge color="danger">"Sobre" obrigatório</ion-badge>
           </div>
         </ion-col>
       </ion-row>
       <ion-row>
-          <ion-col>
-            <ion-item>
-                <ion-label position="floating">Informações adicionais</ion-label>
-                
-                <ion-textarea formControlName="adicionalInformation">
-
-                </ion-textarea>
-            </ion-item>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-            <ion-col>
-              <ion-item>
-                  <ion-label position="floating">Entretenimento</ion-label>
-                  <ion-input
-                  type="text"
-                  formControlName="entertainment"
-                  >
-      
-                  </ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-            <ion-col>
-              <ion-item>
-                  <ion-label position="floating">Preço do convite</ion-label>
-                  <ion-input
-                  type="number"
-                  formControlName="price"
-                  >
-      
-                  </ion-input>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-              <ion-col>
-                <div *ngIf="form.get('price').invalid && form.get('price').dirty">
-                    <ion-badge color="danger">"Preço" obrigatório</ion-badge>
-                </div>
-              </ion-col>
-            </ion-row>
-          <ion-row>
-            <ion-col>
-              <ion-item>
-                  <ion-label position="floating">Data inicial</ion-label>
-                <ion-datetime
-                displayFormat="DD MMM, YYYY HH:mm"
-                minuteValues="0, 15, 30, 45"
-                formControlName="date"
-
-                >
-                  
-                </ion-datetime>
-              </ion-item>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-              <ion-col>
-                <div *ngIf="form.get('date').invalid && form.get('date').dirty">
-                    <ion-badge color="danger">"Data" obrigatória</ion-badge>
-                </div>
-              </ion-col>
-            </ion-row>
-          <ion-row>
-            <ion-col>
-              <ion-item>
-                  <ion-label position="floating">Número de convidados</ion-label>
-                  <ion-input
-                  formControlName="numberGuests"
-                  type="number"
-                  >
-                  </ion-input>
-                  
-              </ion-item>
-            </ion-col>
-          </ion-row>
-          <ion-row>
-              <ion-col>
-                <ion-item>
-                    <ion-label position="floating">Comida</ion-label>
-                    <ion-input
-                    type="text"
-                    formControlName="food"
-                    >
-        
-                    </ion-input>
-                </ion-item>
-              </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                  <div *ngIf="form.get('food').invalid && form.get('food').dirty">
-                      <ion-badge color="danger">"Comida" obrigatória</ion-badge>
-                  </div>
-                </ion-col>
-              </ion-row>
-  </ion-grid>
-</form>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Informações adicionais</ion-label>
+            <ion-textarea formControlName="adicionalInformation">
+            </ion-textarea>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Entretenimento</ion-label>
+            <ion-input type="text" formControlName="entertainment"> </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Preço do convite</ion-label>
+            <ion-input type="number" formControlName="price"> </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div *ngIf="form.get('price').invalid && form.get('price').dirty">
+            <ion-badge color="danger">"Preço" obrigatório</ion-badge>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Inicío do evento</ion-label>
+            <ion-datetime
+              displayFormat="DD MMM, YYYY HH:mm"
+              minuteValues="0, 15, 30, 45"
+              formControlName="startDate"
+            >
+            </ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div
+            *ngIf="form.get('startDate').invalid && form.get('startDate').dirty"
+          >
+            <ion-badge color="danger">"Data" obrigatória</ion-badge>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Fim do evento</ion-label>
+            <ion-datetime
+              displayFormat="DD MMM, YYYY HH:mm"
+              minuteValues="0, 15, 30, 45"
+              formControlName="endDate"
+            >
+            </ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div *ngIf="form.get('endDate').invalid && form.get('endDate').dirty">
+            <ion-badge color="danger">"Data" obrigatória</ion-badge>
+          </div>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Número de convidados</ion-label>
+            <ion-input formControlName="numberGuests" type="number">
+            </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <ion-item>
+            <ion-label position="floating">Comida</ion-label>
+            <ion-input type="text" formControlName="food"> </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col>
+          <div *ngIf="form.get('food').invalid && form.get('food').dirty">
+            <ion-badge color="danger">"Comida" obrigatória</ion-badge>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
