--- a/src/app/home/home-detail/home-detail.page.html
+++ b/src/app/home/home-detail/home-detail.page.html
@@ -28,14 +28,17 @@
             {{ loadedEvent.about }}
           </ion-item>
           <ion-item>
-              {{ loadedEvent.briefInformation }}
+              {{ loadedEvent.adicionalInformation }}
           </ion-item>
           <ion-item>
               {{ loadedEvent.entertainment }}
           </ion-item>
           <ion-item>
-              {{ loadedEvent.date }}
+              {{ loadedEvent.startDate }}
           </ion-item>
+          <ion-item>
+            {{ loadedEvent.endDate }}
+        </ion-item>
         </ion-list>
       </ion-col>
     </ion-row>
