--- a/src/app/get-invitation/get-invitation.component.html
+++ b/src/app/get-invitation/get-invitation.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="tertiary">
     <ion-buttons slot="primary">
       <ion-button (click)="onCancel()">
         <ion-icon name="close">
