permitindo add o evento na aba eventos atuais, alem de ajustar data

--- a/src/app/home/home-detail/home-detail.page.html
+++ b/src/app/home/home-detail/home-detail.page.html
@@ -34,10 +34,10 @@
               {{ loadedEvent.entertainment }}
           </ion-item>
           <ion-item>
-              {{ loadedEvent.startDate }}
+              {{ loadedEvent.startDate | date }}
           </ion-item>
           <ion-item>
-            {{ loadedEvent.endDate }}
+            {{ loadedEvent.endDate | date }}
         </ion-item>
         </ion-list>
       </ion-col>
