--- a/src/app/events/events.page.html
+++ b/src/app/events/events.page.html
@@ -30,7 +30,12 @@
      <ion-list>
         <ion-item *ngFor="let pastEvent of pastEvents" [routerLink]="['./', pastEvent.id]">
           <ion-label>
-            <h6>{{ pastEvent.date }}</h6>
+              <div class="events-details">
+                  <ion-icon name="calendar" color="primary"></ion-icon>
+                  <ion-text color="tertiary" class="space-left">
+                      {{ pastEvent.startDate | date }}
+                  </ion-text>
+                </div>
             <h2>{{ pastEvent.name }}</h2>
             <p>R${{ pastEvent.price }}</p>
           </ion-label>
@@ -42,14 +47,26 @@
     </div>
     <div *ngSwitchCase="segments.CURRENT_EVENT">
         <ion-list>
-            <ion-item [routerLink]="['./', currentEvent.id]">
+          <ion-item *ngIf="!currentEvent || currentEvent.length <= 0">
+            <ion-label>
+              <ion-text>Ainda não estou indo para nenhum evento</ion-text>
+            </ion-label>
+          </ion-item>
+            <ion-item 
+            *ngIf="currentEvent.length > 0"
+            [routerLink]="['./', currentEvent[0].id]">
               <ion-label>
-                <h6>{{ currentEvent.date }}</h6>
-                <h2>{{ currentEvent.name }}</h2>
-                <p>R${{ currentEvent.price }}</p>
+                <div class="events-details">
+                    <ion-icon name="calendar" color="primary"></ion-icon>
+                    <ion-text color="tertiary" class="space-left">
+                        {{ currentEvent[0].startDate | date }}
+                    </ion-text>
+                </div>
+                <h2>{{ currentEvent[0].name }}</h2>
+                <p>R${{ currentEvent[0].price }}</p>
               </ion-label>
               <ion-thumbnail slot="end">
-                <ion-img [src]="currentEvent.urlImage"></ion-img>
+                <ion-img [src]="currentEvent[0].urlImage"></ion-img>
               </ion-thumbnail>
             </ion-item>
           </ion-list>
