request de eventos agora sao func, é possivel editar e deletar

--- a/src/app/events/my-events/my-events.page.html
+++ b/src/app/events/my-events/my-events.page.html
@@ -3,14 +3,14 @@
         <div class="events-details">
           <ion-icon name="calendar" color="primary"></ion-icon>
           <ion-text color="tertiary" class="space-left">
-              {{ myEvents.startDate | date }}
+              {{ myEvents.start_date | date }}
           </ion-text>
         </div>
-        <h2>{{ myEvents.name }}</h2>
+        <h2>{{ myEvents.title }}</h2>
         <p>R${{ myEvents.price }}</p>
       </ion-label>
 
     <ion-thumbnail slot="end">
-      <ion-img [src]="myEvents.urlImage"></ion-img>
+      <ion-img [src]="myEvents.url_image"></ion-img>
     </ion-thumbnail>
   </ion-item>
