--- a/src/app/get-invitation/get-invitation.component.html
+++ b/src/app/get-invitation/get-invitation.component.html
@@ -6,7 +6,7 @@
         </ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>{{ eventInvitation.name }}</ion-title>
+    <ion-title>{{ eventInvitation.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 <ion-content>
