--- a/src/app/events/my-events/edit-my-events/edit-my-events.page.html
+++ b/src/app/events/my-events/edit-my-events/edit-my-events.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar color="tertiary">
-    <ion-title>Editando: {{ event.name }}</ion-title>
+    <ion-title>Editando: {{ event?.title }}</ion-title>
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/events"></ion-back-button>
     </ion-buttons>
     <ion-buttons slot="primary">
-      <ion-button (click)="onUpdateEvent()" [disabled]="form.invalid">
+      <ion-button (click)="onUpdateEvent()" [disabled]="form?.invalid">
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -21,15 +21,15 @@
       <ion-row>
         <ion-col>
           <ion-item>
-            <ion-label position="floating">Nome do evento</ion-label>
-            <ion-input type="text" formControlName="name"> </ion-input>
+            <ion-label position="floating">Título do evento</ion-label>
+            <ion-input type="text" formControlName="title"> </ion-input>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <div *ngIf="form.get('name').invalid && form.get('name').dirty">
-            <ion-badge color="danger">"Nome" obrigatório</ion-badge>
+          <div *ngIf="form?.get('title').invalid && form?.get('title').dirty">
+            <ion-badge color="danger">"Título" obrigatório</ion-badge>
           </div>
         </ion-col>
       </ion-row>
@@ -43,7 +43,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <div *ngIf="form.get('about').invalid && form.get('about').dirty">
+          <div *ngIf="form?.get('about').invalid && form?.get('about').dirty">
             <ion-badge color="danger">"Sobre" obrigatório</ion-badge>
           </div>
         </ion-col>
@@ -51,18 +51,16 @@
       <ion-row>
         <ion-col>
           <ion-item>
-            <ion-label position="floating">Informações adicionais</ion-label>
-            <ion-textarea formControlName="adicionalInformation">
-            </ion-textarea>
+            <ion-label position="floating">Endereço</ion-label>
+            <ion-textarea formControlName="address"> </ion-textarea>
           </ion-item>
         </ion-col>
       </ion-row>
       <ion-row>
         <ion-col>
-          <ion-item>
-            <ion-label position="floating">Entretenimento</ion-label>
-            <ion-input type="text" formControlName="entertainment"> </ion-input>
-          </ion-item>
+          <div *ngIf="form?.get('address').invalid && form?.get('address').dirty">
+            <ion-badge color="danger">"Endereço" obrigatório</ion-badge>
+          </div>
         </ion-col>
       </ion-row>
       <ion-row>
@@ -75,7 +73,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <div *ngIf="form.get('price').invalid && form.get('price').dirty">
+          <div *ngIf="form?.get('price').invalid && form?.get('price').dirty">
             <ion-badge color="danger">"Preço" obrigatório</ion-badge>
           </div>
         </ion-col>
@@ -87,7 +85,7 @@
             <ion-datetime
               displayFormat="DD MMM, YYYY HH:mm"
               minuteValues="0, 15, 30, 45"
-              formControlName="startDate"
+              formControlName="start_date"
             >
             </ion-datetime>
           </ion-item>
@@ -96,7 +94,7 @@
       <ion-row>
         <ion-col>
           <div
-            *ngIf="form.get('startDate').invalid && form.get('startDate').dirty"
+            *ngIf="form?.get('start_date').invalid && form?.get('start_date').dirty"
           >
             <ion-badge color="danger">"Data" obrigatória</ion-badge>
           </div>
@@ -109,7 +107,7 @@
             <ion-datetime
               displayFormat="DD MMM, YYYY HH:mm"
               minuteValues="0, 15, 30, 45"
-              formControlName="endDate"
+              formControlName="end_date"
             >
             </ion-datetime>
           </ion-item>
@@ -117,7 +115,7 @@
       </ion-row>
       <ion-row>
         <ion-col>
-          <div *ngIf="form.get('endDate').invalid && form.get('endDate').dirty">
+          <div *ngIf="form?.get('end_date').invalid && form?.get('end_date').dirty">
             <ion-badge color="danger">"Data" obrigatória</ion-badge>
           </div>
         </ion-col>
@@ -125,25 +123,10 @@
       <ion-row>
         <ion-col>
           <ion-item>
-            <ion-label position="floating">Número de convidados</ion-label>
-            <ion-input formControlName="numberGuests" type="number">
+            <ion-label position="floating">Número máximo de convidados</ion-label>
+            <ion-input formControlName="max_guests" type="number">
             </ion-input>
           </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <ion-item>
-            <ion-label position="floating">Comida</ion-label>
-            <ion-input type="text" formControlName="food"> </ion-input>
-          </ion-item>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <div *ngIf="form.get('food').invalid && form.get('food').dirty">
-            <ion-badge color="danger">"Comida" obrigatória</ion-badge>
-          </div>
         </ion-col>
       </ion-row>
     </ion-grid>
