nova listagem de eventos

--- a/src/app/home/home-detail/home-detail.page.html
+++ b/src/app/home/home-detail/home-detail.page.html
@@ -47,7 +47,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button expand="full" (click)="onGetInvitation()">
+        <ion-button expand="full" (click)="onEnsureInvitation(loadedEvent.id)">
             GARANTIR CONVITE
         </ion-button>
       </ion-col>
