add botão pagar, events current filtrando

--- a/src/app/events/event-detail/event-detail.page.html
+++ b/src/app/events/event-detail/event-detail.page.html
@@ -56,5 +56,8 @@
         </ion-col>
       </ion-col>
     </ion-row>
+      <div>
+        <ion-button (click)="onPayEvent()">PAGAR</ion-button>
+      </div>
   </ion-grid>
 </ion-content>
