--- a/src/app/home/home-detail/home-detail.page.html
+++ b/src/app/home/home-detail/home-detail.page.html
@@ -3,54 +3,51 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/home"></ion-back-button>
     </ion-buttons>
-    <ion-title> {{ loadedEvent?.title }}</ion-title>
+    <ion-title> Evento</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div *ngIf="isLoading" class="ion-text-center ion-padding">
-    <ion-spinner color="primary"></ion-spinner>
-  </div>
-  <ion-grid no-padding *ngIf="loadedEvent">
-    <ion-row>
-      <ion-col no-padding>
-        <ion-img [src]="loadedEvent.url_image"></ion-img>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-text color="secondary">
-          <h2 text-center>R${{ loadedEvent.price }}</h2>
-        </ion-text>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-list>
-          <ion-item>
-            <ion-text>
-              <b>Sobre: </b> {{ loadedEvent.about }}
-            </ion-text>
-          </ion-item>
-          <ion-item>
-            <ion-text>
-              <b>Inicio: </b> {{ loadedEvent.start_date | date }}
-            </ion-text>
-          </ion-item>
-          <ion-item>
-            <ion-text>
-                <b>Fim: </b> {{ loadedEvent.start_date | date }}
-            </ion-text>
+  <ion-card *ngIf="loadedEvent">
+    <ion-img [src]="loadedEvent.url_image"></ion-img>
+    <ion-card-header>
+      <ion-card-subtitle>{{ loadedEvent.start_date| date }} - {{ loadedEvent.end_date | date}}</ion-card-subtitle>
+      <ion-card-title>{{ loadedEvent.title }} -
+        <ion-text color="primary">R{{ loadedEvent.price | currency }}</ion-text>
+      </ion-card-title>
+    </ion-card-header>
+
+    <ion-card-content>
+      <div class="ion-text-wrap">
+        {{ loadedEvent.about }}
+      </div>
+      <ion-list>
+        <ion-item>
+          <ion-icon name="alarm" slot="start"></ion-icon>
+          <ion-label>
+            <h2>Horário</h2>
+            <p>{{ startHour }} até {{ endHour }}</p>
+          </ion-label>
         </ion-item>
-        </ion-list>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-button expand="full" (click)="onEnsureInvitation(loadedEvent.id)">
-            GARANTIR CONVITE
-        </ion-button>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+        <ion-item>
+          <ion-icon name="people" slot="start"></ion-icon>
+          <ion-label>
+            <h2>Quantidade máxima</h2>
+            <p>{{ loadedEvent.max_guests }} pessoas</p>
+          </ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="globe" slot="start"></ion-icon>
+          <ion-label class="ion-text-wrap">
+            <h2>Endereço</h2>
+            <a>{{ loadedEvent.address }}</a>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+    
+      <ion-button (click)="onEnsureInvitation(loadedEvent.id)" expand="block" color="primary">
+        Garantir convite
+      </ion-button>
+  </ion-card>
 </ion-content>
